<resources>
    <string name="app_name">Droid Pay</string>
    <string name="home">HOME</string>
    <string name="scan">PAY</string>
    <string name="user">ACCOUNT</string>
    <string name="rs">₹</string>
    <string name="balance">Your Balance</string>
    <string name="add">Add Money</string>
    <string name="user_name">Mr. User Name</string>
    <string name="mobile">+91 9874563210</string>
    <string name="mobile_hint">9874563210</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="create_Account">Register Account</string>
    <string name="name_hint">Enter your name</string>
    <string name="email_hint">Enter email</string>
    <string name="create_Account_txt">Create Account text</string>
    <string name="register">Register</string>
    <string name="card_rfid">Card registration</string>
    <string name="password_hint">Enter password</string>
    <string name="pay">PAY</string>
    <string name="vendor_name">Name</string>
    <string name="enter_ref">Reference Text</string>
    <string name="hi">Hi! User</string>
    <string name="login_hint">Login hint text enter mobile and password</string>
    <string name="login">Login</string>
    <string name="regno_hint">11409652</string>
    <string name="otp_verify">OTP Verify</string>
    <string name="enterotp">Enter OTP</string>
    <string name="verify">VERify</string>
    <string name="g_pay_txt">Use Gpay (UPI Payment)</string>
    <string name="phone_pe_txt">Use Phonepe (UPI Payment)</string>
    <string name="paytm">Paytm (Paytm wallet, Netbanking, Debit Card , Credit Card)</string>
    <string name="rxr_txt">Use Mobile wallet, Netbanking, Debit Card , Credit Card</string>
    <string name="select_payment_mode">Payment Mode</string>
    <string name="upiId">9815963210@paytm</string>
    <string name="card_number">0000 0000 0000 0000</string>
    <string name="valid_date">01/01/2019</string>
    <string name="droid_card">Your Droid Card</string>
    <string name="droid_qr">Your QR</string>
    <string name="show_qr">Scan this QR code to send money to </string>
    <string name="changePin">Change Pin</string>
    <string name="alert">Your card is disable use switch to enable it.</string>
    <string name="tap">Tap on QR to scan</string>
    <string name="changePinold">Enter old pin</string>
    <string name="changePinnew">Enter new pin</string>
    <string name="bottom_sheet_peek">bootomsheet</string>
    <string name="bottom_sheet_content">cotent</string>
    <string name="changePinhint">Change Your Pin</string>
    <string name="genratePin">Generate new Pin</string>
    <string name="pleaseWait">Please wait while we confirm your payment.Don\'t press back button or reload the page</string>
    <string name="moneyAdded">Money Added Successfully</string>
    <string name="added_from">ADDED FROM</string>
    <string name="TOWALLET">TO:DroidPay Wallet</string>
    <string name="passbok">View Passbook</string>
    <string name="newpin">Your New Pin</string>
    <string name="logout_hint">Logout Alert</string>
    <string name="logout_hint_Alert"><![CDATA[Are you sure you want to logout ?]]></string>
    <string name="Alert_danger">Alert</string>
    <string name="text">Text</string>
    <string name="warning">Warning</string>
    <string name="pleaseWait_text">text</string>
    <string name="moneyTransfer">Money Transfer Successfull</string>
    <string name="TOMOBILE">TO 982333333</string>
    <string name="moneyTransferFrom">Transaction Details</string>
    <string name="required_money">Required Moeny to be added</string>
    <string name="add_now">ADD NOW</string>
    <string name="no_payment">No Transaction Found</string>
    <string name="select_date">Select Date</string>
    <string name="type_payment">type</string>
    <string name="hint_text">hello</string>
    <string name="your_mobile">Your Mobile</string>
    <string name="updateProfile">Update Profile</string>
    <string name="email_hint_y">Your Email</string>
    <string name="name_hint_y">Your email</string>
    <string name="name_hint_yo">Your Name</string>
    <string name="newCard">Add Card</string>
</resources>
