<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/parent_layout_padding"
    android:background="@color/white"
    tools:context=".LoginActivity">
    <ImageView
        android:layout_gravity="center"
        android:layout_width="180sp"
        android:layout_height="180sp"
        android:src="@drawable/droidpaylogo"/>
    <TextView
        android:textSize="@dimen/size_32"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/copanyName"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/login_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/mobile"
            android:drawablePadding="@dimen/padding_4"
            android:drawableLeft="@drawable/ic_phone_android_black_24dp"
            android:drawableTint="@color/colorPrimaryDark"
            android:hint="@string/mobile_hint"
            android:inputType="number"
            android:background="@drawable/bg_input"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/password"
        android:drawablePadding="@dimen/padding_4"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawableTint="@color/colorPrimaryDark"
        android:background="@drawable/bg_input"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <Button
        android:id="@+id/loginBtn"
        android:background="@drawable/red_btn"
        android:textColor="@color/white"
        android:text="@string/login"
        android:layout_gravity="end"
        android:layout_margin="@dimen/margin_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/registerBtn"
        android:padding="@dimen/padding_12"
        android:layout_marginTop="@dimen/size_24"
       android:theme="@style/FlatButton"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>