<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/parent_layout_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="120sp"
                android:src="@drawable/user"
                />
            <LinearLayout
                android:layout_marginTop="@dimen/size_32"
                android:orientation="vertical"
                android:layout_width="0sp"
                android:layout_weight="2"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vendor_name"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/colorPrimaryDark" />
                <TextView
                    android:id="@+id/mobile"
                    android:textColor="@color/secondary"
                    android:text="@string/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <EditText
            android:id="@+id/amount"
            android:drawableStart="@drawable/inr"
            android:drawableTint="@color/colorPrimaryDark"
            android:drawablePadding="@dimen/size_2"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="number"
            android:layout_marginTop="@dimen/margin_top"
            android:hint="@string/enter_amount"
            android:background="@drawable/bg_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/ref"
            android:background="@drawable/ref_input"
            android:inputType="textShortMessage"
            android:hint="@string/enter_ref"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/pay"
        android:textColor="@color/white"
        android:text="@string/pay"
        android:layout_margin="@dimen/margin_top"
        android:background="@drawable/btn"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>