<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SuccessAddWallet">
    <TextView
        android:id="@+id/successMsg"
        android:drawableEnd="@drawable/tick"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/moneyAdded"
        android:padding="@dimen/parent_layout_padding"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/parent_layout_padding"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/size_18"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_weight="2"
                android:text="@string/TOWALLET"
                android:layout_width="0sp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/amountAdded"
                android:textSize="@dimen/size_18"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="viewEnd"
                android:text="@string/rs"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:layout_width="0sp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:layout_marginTop="@dimen/size_32"
            android:text="@string/added_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="@dimen/size_6"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/size_18"
            android:text="@string/upiId"
            android:id="@+id/addedSrc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/orderID"
            android:layout_marginTop="@dimen/size_12"
            android:text="order id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/date"
            android:layout_marginTop="@dimen/size_4"
            android:text="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/zero"
        android:background="@color/white"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="@dimen/padding_12"
            android:layout_marginTop="@dimen/size_28"
            android:id="@+id/updatedBalance"
            android:text="updated balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_marginTop="@dimen/padding_8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/padding_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/addMoney"
                android:drawablePadding="@dimen/padding_8"
                android:textAlignment="textStart"
                android:text="@string/add"
                android:textColor="@color/success_green_back"
                android:theme="@style/WhiteFlatButton"
                android:drawableLeft="@drawable/addmoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/passbook"
                android:drawablePadding="@dimen/padding_8"
                android:textAlignment="textStart"
                android:text="@string/passbok"
                android:textColor="@color/success_green_back"
                android:theme="@style/WhiteFlatButton"
                android:drawableLeft="@drawable/passbook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/home"
                android:drawablePadding="@dimen/padding_8"
                android:textAlignment="textStart"
                android:text="@string/home"
                android:textColor="@color/success_green_back"
                android:theme="@style/WhiteFlatButton"
                android:drawableLeft="@drawable/homep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>