<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_marginTop="?attr/actionBarSize"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/parent_layout_padding"
    android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputLayout
            android:background="@drawable/ref"
            android:layout_width="match_parent"
            android:hint="@string/name_hint_yo"
            android:id="@+id/nameLayout"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:inputType="textPersonName"
                />
        </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/size_4"
            android:background="@drawable/ref"
            android:layout_width="match_parent"
            android:hint="@string/email_hint_y"
             android:id="@+id/emailLayout"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/size_4"
            android:background="@drawable/ref"
            android:layout_width="match_parent"
            android:hint="@string/your_mobile"
             android:id="@+id/mobileLayout"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mobile"
                android:enabled="false"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/updateP"
            android:layout_marginTop="@dimen/margin_top"
            android:textColor="@color/white"
            android:background="@drawable/btn"
            android:text="@string/updateProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
</LinearLayout>