<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragment.ProfileFrag">
    <RelativeLayout
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/parent_layout_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120sp"
                android:layout_height="120sp"
                android:src="@drawable/user"
                android:id="@+id/userProfileImage"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"/>
        <TextView
            android:id="@+id/userProfileName"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/user_name"
            android:layout_below="@id/userProfileImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/userMobileNumber"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/size_6"
            android:layout_below="@id/userProfileName"
            android:text="@string/mobile"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:padding="@dimen/parent_layout_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:textAlignment="textStart"
                android:theme="@style/FlatButton"
                android:id="@+id/droid_card"
                android:textSize="@dimen/size_20"
                android:drawablePadding="@dimen/padding_4"
                android:drawableLeft="@drawable/ic_credit_card_black_24dp"
                android:text="@string/droid_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start" />
            <Button
                android:layout_marginTop="@dimen/margin_top"
                android:textAlignment="textStart"
                android:theme="@style/FlatButton"
                android:id="@+id/your_qr_code"
                android:textSize="@dimen/size_20"
                android:drawablePadding="@dimen/padding_4"
                android:drawableLeft="@drawable/qrcode_14sp"
                android:text="@string/droid_qr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start" />
            <Button
                android:layout_marginTop="@dimen/margin_top"
                android:textAlignment="textStart"
                android:theme="@style/FlatButton"
                android:id="@+id/passbook"
                android:textSize="@dimen/size_20"
                android:drawableTint="@color/black"
                android:drawablePadding="@dimen/padding_4"
                android:drawableLeft="@drawable/passbook"
                android:text="@string/passbok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start" />
<Button
                android:layout_marginTop="@dimen/margin_top"
                android:textAlignment="textStart"
                android:theme="@style/FlatButton"
                android:id="@+id/update"
                android:textSize="@dimen/size_20"
                android:drawableTint="@color/black"
                android:drawablePadding="@dimen/padding_4"
                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                android:text="@string/updateProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start" />

        </LinearLayout>
        <Button
            android:id="@+id/logout"
            android:layout_marginBottom="@dimen/size_54"
            android:textColor="@color/white"
            android:text="logout"
            android:background="@drawable/red_btn"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</LinearLayout>